# yandex-mcp-server

./: .dockerignore  .env.example  .env.prod.example  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.admin  LICENSE  README.md  alembic.ini  docker-compose.prod.sqlite.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
admin/: app.py
admin/static/: style.css
admin/templates/: add_integration.html  base.html  dashboard.html  debug_accounts.html  edit_account.html  oauth_error.html  select_accounts.html  service_page.html
admin/templates/partials/: account_card.html  add_modal.html  empty_state.html  manual_form.html
alembic/: env.py
alembic/versions/: 1f862e7062ab_initial.py  d2d84b9280cc_add_account_context.py
app/: apiforge_async.py  config.py  context_parser.py  crypto.py  database.py  main.py  models.py  rate_limiter.py
app/prompts/: yandex_scenarios.py
app/resources/: yandex_docs.py
app/services/: account_service.py
app/tools/: account_management.py  accounts.py  admetrica.py  audience.py  direct.py  feedback.py  metrika.py  webmaster.py  wordstat.py
app/yandex_configs/: admetrica.json  audience.json  direct.json  metrika.json  webmaster.json
docs/: atlas-mcp-connection.md  atlas-tools-dump.json  yandex-mcp-connection.md  yandex-prompt-analyze.json  yandex-prompts-dump.json  yandex-resource-direct-docs.txt  yandex-resources-dump.json  yandex-tools-dump.json
scripts/: seed.py
tests/: conftest.py  test_check_status.py  test_direct_jsonrpc.py  test_manual_add_validation.py  test_oauth_scopes.py
