[project]
name = "yandex-mcp-server"
version = "0.1.0"
description = "MCP server for Yandex APIs (Direct, Metrika, Audience, Webmaster, AdMetrica)"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "aiomysql>=0.2.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "cryptography>=42.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "apiforge",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv.sources]
apiforge = { git = "https://github.com/mlenkov/apiforge.git" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
